--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -3,7 +3,6 @@ name: Checks
 
 on: [push]
 
-
 jobs:
   test-lint:
     name: Test and Lint
@@ -12,8 +11,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: hitiksha231
+          password: hiti$$98241
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test
