--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -35,9 +35,9 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          registry: https://index.docker.io/v2/
+          username: hitiksha231
+          password: hiti$$98241
+
       
       - name: Set up Docker Compose
         run: docker-compose --version
